# serializer version: 1
# name: test_entities[light.cct_0000_03-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 8000,
      'max_mireds': 1000,
      'min_color_temp_kelvin': 1000,
      'min_mireds': 125,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.cct_0000_03',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'sunricher_dali_center',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01020000036A242121110E',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[light.cct_0000_03-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': None,
      'color_mode': None,
      'color_temp': None,
      'color_temp_kelvin': None,
      'friendly_name': 'CCT 0000-03',
      'hs_color': None,
      'max_color_temp_kelvin': 8000,
      'max_mireds': 1000,
      'min_color_temp_kelvin': 1000,
      'min_mireds': 125,
      'rgb_color': None,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': None,
    }),
    'context': <ANY>,
    'entity_id': 'light.cct_0000_03',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[light.dimmer_0000_02-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.dimmer_0000_02',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'sunricher_dali_center',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01010000026A242121110E',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[light.dimmer_0000_02-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': None,
      'color_mode': None,
      'friendly_name': 'Dimmer 0000-02',
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.dimmer_0000_02',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[light.hs_color_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.HS: 'hs'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.hs_color_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'sunricher_dali_center',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01030000046A242121110E',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[light.hs_color_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': None,
      'color_mode': None,
      'friendly_name': 'HS Color Light',
      'hs_color': None,
      'rgb_color': None,
      'supported_color_modes': list([
        <ColorMode.HS: 'hs'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': None,
    }),
    'context': <ANY>,
    'entity_id': 'light.hs_color_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[light.rgbw_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.RGBW: 'rgbw'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.rgbw_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'sunricher_dali_center',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01040000056A242121110E',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[light.rgbw_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': None,
      'color_mode': None,
      'friendly_name': 'RGBW Light',
      'hs_color': None,
      'rgb_color': None,
      'rgbw_color': None,
      'supported_color_modes': list([
        <ColorMode.RGBW: 'rgbw'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': None,
    }),
    'context': <ANY>,
    'entity_id': 'light.rgbw_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
